[package]
name = "axum-markdown"
version = "0.1.0"
edition = "2021"
description = "Axum middleware for Cloudflare-style Markdown for Agents content negotiation"
license = "MIT"

[dependencies]
axum = "0.8"
tower = "0.5"
http = "1"
htmd = "0.1"
tiktoken-rs = "0.6"
pin-project-lite = "0.2"
bytes = "1"

[dev-dependencies]
tower-http = { version = "0.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[[example]]
name = "basic"
path = "examples/basic.rs"
