[package]
name = "axum-markdown"
version = "0.1.0"
edition = "2021"
description = "Axum middleware for Cloudflare-style Markdown for Agents content negotiation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/windowlickers/axum-markdown"
keywords = ["axum", "markdown", "middleware", "content-negotiation"]
categories = ["web-programming::http-server"]
exclude = ["flake.nix", "flake.lock", ".envrc", "CLAUDE.md", "rust-toolchain.toml"]

[dependencies]
axum = "0.8"
tower = "0.5"
http = "1"
htmd = "0.1"
tiktoken-rs = "0.6"
pin-project-lite = "0.2"
bytes = "1"

[dev-dependencies]
tower-http = { version = "0.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
